JumpScript/tests/baselines/reference/conditionalExpressionNewLine10.errors.txt
tests/cases/compiler/conditionalExpressionNewLine10.jump(1,9): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(2,5): error TS2304: Cannot find name 'b'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(3,7): error TS2304: Cannot find name 'd'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(4,7): error TS2304: Cannot find name 'e'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(5,5): error TS2304: Cannot find name 'c'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(6,7): error TS2304: Cannot find name 'f'.
tests/cases/compiler/conditionalExpressionNewLine10.jump(7,7): error TS2304: Cannot find name 'g'.


==== tests/cases/compiler/conditionalExpressionNewLine10.jump (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b
        ~
!!! error TS2304: Cannot find name 'b'.
        ? d
          ~
!!! error TS2304: Cannot find name 'd'.
        : e
          ~
!!! error TS2304: Cannot find name 'e'.
      : c
        ~
!!! error TS2304: Cannot find name 'c'.
        ? f
          ~
!!! error TS2304: Cannot find name 'f'.
        : g;
          ~
!!! error TS2304: Cannot find name 'g'.